--- a/index.html
+++ b/index.html
@@ -7,30 +7,26 @@
 </head>
 <body>
   <div class="wrapper clearfix">
-    <div class="first-block">
-      <div class="head">
-        <h2>Online sender</h2>
+    <div class="blocks">
+      <div class="first-block clearfix">
+        <div class="head">
+          <h2>Online sender</h2>
+        </div>
+        <div class="text">
+          <p>
+            Данное веб-приложение предназначено для тестирования html-рассылок. Вам нужно лишь указать один или несколько почтовых ящиков, загрузить html файл и нажать кнопку - на указанные адреса прилетит ваша верстка.
+          </p>
+        </div>
       </div>
-      <div class="text">
-        <p>
-          Данное веб-приложение предназначено для тестирования html-рассылок. Вам нужно лишь указать один или несколько почтовых ящиков, загрузить html файл и нажать кнопку - на указанные адреса прилетит ваша верстка.
-        </p>
-      </div>
-    </div>
-    <div class="first-block">
-      <div class="head">
-        <h2>Укажите почтовые ящики</h2>
-      </div>
-      <div class="text">
-        <p>
-          myinbox@ya.ru
-        </p>
-        <p>
-          example@mail.com
-        </p>
-        <p>
-          example@mail.com
-        </p>
+      <div class="second-block clearfix">
+        <div class="head">
+          <h2>Укажите почтовые ящики</h2>
+        </div>
+        <div class="inputs">
+          <input type="text" value="myinbox@ya.ru">
+          <input type="text" value="example@mail.com">
+          <input type="text" value="example@mail.com">
+        </div>
       </div>
     </div>
   </div>
