--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <h2>Укажите почтовые ящики</h2>
         </div>
         <div class="inputs">
-          <input type="text" value="myinbox@ya.ru">
-          <input type="text" value="example@mail.com">
-          <input type="text" value="example@mail.com">
+          <input type="text" class="icon" value="myinbox@ya.ru">
+          <input type="text" class="icon" value="example@mail.com">
+          <input type="text" class="icon" value="example@mail.com">
         </div>
       </div>
     </div>
